--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,8 +2,8 @@
 host_key_checking = False
 log_path = ./.ansible.log
 inventory = inventory
-private_key_file = ~/.ssh/20180913.pem
-remote_user = ubuntu
+private_key_file = ~/.ssh/isucon.id_rsa
+remote_user = isucon
 gathering = explicit
 retry_files_enabled = false
 # vault_password_file = ~/.vault_password_file
