--- a/roles/h2o/files/h2o.conf
+++ b/roles/h2o/files/h2o.conf
@@ -12,6 +12,12 @@ hosts:
     listen:
       port: 80
       host: 0.0.0.0
+    # listen:
+    #   port: 443
+    #   host: 0.0.0.0
+    #   ssl:
+    #     certificate-file: /etc/pki/tls/certs/localhost.crt
+    #     key-file: /etc/pki/tls/private/localhost.key
     paths:
       "/favicon.ico":
         file.file: /home/isucon/torb/webapp/static/favicon.ico
@@ -21,9 +27,6 @@ hosts:
         file.dir: /home/isucon/torb/webapp/static/img
       "/js":
         file.dir: /home/isucon/torb/webapp/static/js
-      "/admin/":
-        proxy.reverse.url: http://172.16.205.2:8080/admin/
-        proxy.preserve-host: ON
       "/":
-        proxy.reverse.url: http://127.0.0.1:8080/
+        proxy.reverse.url: http://app.localhost:8080/
         proxy.preserve-host: ON
