--- a/roles/h2o/files/h2o.conf
+++ b/roles/h2o/files/h2o.conf
@@ -2,7 +2,7 @@ user: isucon
 
 access-log:
   path: /var/log/h2o/access.log
-  format: "time:%t\thost:%h\tforwardedfor:%{x_forwarded_for}i\treq:%r\tstatus:%s\tmethod:%m\turi:%U\tsize:%b\treferer:%{referer}i\tua:%{user_agent}i\treqtime:%{duration}x\tcache:%{x_cache}o\truntime:%{x_runtime}o\tapptime:%{process_time}x\tvhost:%V"
+  # format: "time:%t\thost:%h\tforwardedfor:%{x_forwarded_for}i\treq:%r\tstatus:%s\tmethod:%m\turi:%U\tsize:%b\treferer:%{referer}i\tua:%{user_agent}i\treqtime:%{duration}x\tcache:%{x_cache}o\truntime:%{x_runtime}o\tapptime:%{process_time}x\tvhost:%V"
 
 error-log: /var/log/h2o/error.log
 pid-file: /var/run/h2o/h2o.pid
@@ -20,12 +20,16 @@ hosts:
     #     key-file: /etc/pki/tls/private/localhost.key
     paths:
       "/favicon.ico":
+        header.merge: "Cache-Control: public, max-age=31536000, immutable"
         file.file: /home/isucon/torb/webapp/static/favicon.ico
       "/css":
+        header.merge: "Cache-Control: public, max-age=31536000, immutable"
         file.dir: /home/isucon/torb/webapp/static/css
       "/img":
+        header.merge: "Cache-Control: public, max-age=31536000, immutable"
         file.dir: /home/isucon/torb/webapp/static/img
       "/js":
+        header.merge: "Cache-Control: public, max-age=31536000, immutable"
         file.dir: /home/isucon/torb/webapp/static/js
       "/":
         proxy.reverse.url: http://app.localhost:8080/
